--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,23 +1,40 @@
-pre,
-code {
-  font-family: $monospaced-font;
-}
+.catalogue {
+  &-item {
+    border-bottom: 1px solid $grey-2;
+    color: $default-color;
+    display: inline-block;
+    padding: 2rem 0;
 
-code {
-  background-color: $grey-3;
-  border-radius: 3px;
-  color: $code-color;
-  font-size: 85%;
-  padding: .25em .5em;
-}
+    &:hover .catalogue-line,
+    &:focus .catalogue-line {
+      width: 5rem;
+    }
 
-pre {
-  margin: 0 0 1rem;
-}
+    &:last-child {
+      border: 0;
+    }
+  }
 
-pre code {
-  background-color: transparent;
-  color: inherit;
-  font-size: 100%;
-  padding: 0;
+  &-time {
+    color: $default-tint;
+    font-family: $palatino;
+    letter-spacing: .5px;
+  }
+
+  &-title {
+    color: $default-shade;
+    display: block;
+    font-family: $sans-font;
+    font-size: 1.5rem !important;
+    font-weight: 700;
+    margin: .5rem 0;
+    line-height: 1.3 !important;
+  }
+
+  &-line {
+    @include transition(all .3s ease-out);
+    border-top: .2rem solid $default-shade;
+    display: block;
+    width: 2rem;
+  }
 }
